# ki-berater

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  BILLING_SETUP.md  Caddyfile  DEPLOY.md  Dockerfile  LOCAL_SETUP.md  Makefile  PLUGIN_DISTRIBUTION.md  README.md  SECURITY.md  build-plugin.bat  create-test-shop.bat  docker-compose.prod.yml  docker-compose.yml  git-push.bat  link-plugin-to-wp.bat  pyproject.toml  reset-dev.bat  start-demo.bat  start-dev.bat  stop-dev.bat  tail-logs.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plugin.yml
backend/: alembic.ini  docker-entrypoint.sh  main.py
backend/admin/: __init__.py  auth.py  queries.py  routes.py
backend/alembic/: env.py
backend/api/: cors_middleware.py  deps.py  health.py  middleware.py  rate_limit.py  security_headers.py
backend/billing/: plans.py  service.py  stripe_client.py
backend/core/: config.py  logging.py  security.py  sentry.py
backend/db/: session.py  tenant_query.py
backend/embeddings/: embedder.py
backend/llm/: bootstrap.py  cost_tracker.py  pricing.py  router.py  types.py
backend/models/: __init__.py  _mixins.py  conversation.py  llm_usage.py  message.py  product.py  product_click.py  shop.py
backend/prompts/: system_prompt.py
backend/schemas/: analytics.py  billing.py  conversation.py  message.py  product.py  shop.py
backend/services/: analytics_service.py  conversation_service.py  export_service.py  product_indexer.py  retention_service.py  shop_service.py  sync_service.py
backend/tests/: conftest.py  test_analytics.py  test_billing_plans.py  test_billing_quota.py  test_billing_stripe.py  test_clicks_and_attribution.py  test_conversation_with_products.py  (+21 more)
demo/: README.md  config.example.js  index.html  styles.css
landing/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
scripts/: backup-postgres.sh  build-plugin.ps1  create-test-shop.sh  create_test_shop.py  dev_server.py  ensure-admin-key.py  generate_demo_config.py
(+78 files in other folders)
