[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ki-berater-backend"
version = "0.1.0"
description = "KI-Verkaufsberater Backend für WooCommerce"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "redis>=5.2",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "anthropic>=0.39",
    "google-genai>=0.3",
    "qdrant-client>=1.12",
    "stripe>=10.0",
    "sentry-sdk[fastapi]>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    # Embedded Postgres for integration tests when no real Postgres is around.
    # Used as fallback in tests/conftest.py — disable with USE_EMBEDDED_POSTGRES=0.
    "pgserver>=0.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"backend/alembic/versions/*.py" = ["E501"]
"backend/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgserver.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Required for session-scoped async fixtures (e.g. shared DB engine).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/alembic/*"]
